# Template-for-Python-Project

./: LICENSE  README.md  pyproject.toml
src/core/: config.py  logging.py
